cmake_minimum_required(VERSION 2.8)
project(ghaas)

#set(CMAKE_C_COMPILER /usr/bin/gcc)
#set(CMAKE_CXX_COMPILER /usr/bin/g++)
set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

if(${CMAKE_HOST_APPLE})
    if(EXISTS "/usr/local/lib")
        link_directories(/usr/local/lib)
    endif(EXISTS "/usr/local/lib")
    if(EXISTS "/usr/local/include")
        include_directories(/usr/local/include)
        include_directories(/opt/local/include/udunits2)
    endif(EXISTS "/usr/local/include")
    if(EXISTS "/opt/local/lib")
        link_directories(/opt/local/lib)
    elseif(EXISTS "/sw/lib")
        link_directories(/sw/lib)
        if (EXISTS "/opt/X11/lib")
            link_directories(/opt/X11/lib)
        endif (EXISTS "/opt/X11/lib")
    endif(EXISTS "/opt/local/lib")
    if(EXISTS "/opt/local/include")
        include_directories(/opt/local/include)
    elseif(EXISTS "/sw/include")
        include_directories(/sw/include)
        if (EXISTS "/opt/X11/include")
            include_directories(/opt/X11/include)
        endif (EXISTS "/opt/X11/include")
    endif(EXISTS "/opt/local/include")
endif(${CMAKE_HOST_APPLE})

add_subdirectory(CMlib)
add_subdirectory(DBlib)
add_subdirectory(Flib)
add_subdirectory(MFlib)
add_subdirectory(ncCommands)
add_subdirectory(NClib)
add_subdirectory(RGlib)
add_subdirectory(rCommands)
add_subdirectory(rGIS)
add_subdirectory(rServer)
add_subdirectory(UIlib)
add_subdirectory(tfCommands)
add_subdirectory(threadTest)
add_subdirectory(WBMstable)

install(DIRECTORY f          DESTINATION ghaas)
install(DIRECTORY Scripts    DESTINATION ghaas)
install(DIRECTORY Messages   DESTINATION ghaas)
install(DIRECTORY html       DESTINATION ghaas)
install(DIRECTORY XResources DESTINATION ghaas)