set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
FILE(GLOB sources src/*.c)
add_library(MF10 ${sources})
target_include_directories(MF10 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ../CMlib/include)
install(TARGETS MF10 ARCHIVE DESTINATION ghaas/lib)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/MF.h DESTINATION ghaas/include)
