set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
FILE(GLOB sources src/*.C)
add_executable(WBMplus.bin ${sources})
if(${CMAKE_HOST_APPLE})
    target_link_libraries(WBMplus.bin CM10 MF10 m)
else(${CMAKE_HOST_APPLE})
    target_link_libraries(WBMplus.bin CM10 MF10 m -pthread)
endif(${CMAKE_HOST_APPLE})
target_include_directories(WBMplus.bin PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ../CMlib/include ../MFlib/include)
install (TARGETS WBMplus.bin RUNTIME DESTINATION ghaas/bin)
