set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
FILE(GLOB sources src/*.c)
add_executable(WBMstable.bin ${sources})
if(${CMAKE_HOST_APPLE})
    target_link_libraries(WBMstable.bin MF10 CM10 m)
else(${CMAKE_HOST_APPLE})
    target_link_libraries(WBMstable.bin MF10 CM10 m -pthread)
endif(${CMAKE_HOST_APPLE})
target_include_directories(WBMstable.bin PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ../CMlib/include ../MFlib/include)
install (TARGETS WBMstable.bin RUNTIME DESTINATION ghaas/bin)
