set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
FILE(GLOB sources src/*.C)
add_executable(WBMtest.bin ${sources})
if(${CMAKE_HOST_APPLE})
    target_link_libraries(WBMtest.bin CM10 MF10 m)
else(${CMAKE_HOST_APPLE})
    target_link_libraries(WBMtest.bin CM10 MF10 m -pthread)
endif(${CMAKE_HOST_APPLE})
target_include_directories(WBMtest.bin PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ../CMlib/include ../MFlib/include)
install (TARGETS WBMtest.bin RUNTIME DESTINATION ghaas/bin)
