set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
FILE(GLOB sources src/*.c)
add_executable(threadTest ${sources})
if(${CMAKE_HOST_APPLE})
	target_link_libraries(threadTest MF10 CM10 m)
else(${CMAKE_HOST_APPLE})
	target_link_libraries(threadTest MF10 CM10 m -pthread)
endif(${CMAKE_HOST_APPLE})
target_include_directories(threadTest PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ../CMlib/include ../MFlib/include)
install (TARGETS threadTest RUNTIME DESTINATION ghaas/bin)